--- a/composer.json
+++ b/composer.json
@@ -3,12 +3,13 @@
   "type": "library",
   "license": "MIT",
     "require": {
-      "guzzlehttp/guzzle": "^7.4",
+      "guzzlehttp/guzzle": "^5.3.4",
       "ext-json": "*"
     },
   "autoload": {
     "psr-4": {
-      "Wassa\\WeDooGift\\": "src/"
+      "Wassa\\WeDooGift\\": "src/",
+      "Guzzle\\": "vendor/guzzlehttp/guzzle/src"
     }
   }
 }
